fixed buttons and topleft text spacing

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@ a,
 
 .subtext {
     min-width: 450px;
-    flex: 1 0 auto;
+    padding: 0;
+    margin: 0;
 }
 
 .header,
@@ -46,15 +47,6 @@ a,
     margin-right: 800px;
 }
 
-.btn {
-    background-color: #3882f6;
-    color: white;
-    border-radius: 5px;
-    border: none;
-    width: 100px;
-    height: 30px;
-}
-
 .top {
     display: flex;
     flex-direction: row;
@@ -76,7 +68,7 @@ a,
     margin-left: 800px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     width: 300px;
     height: 300px;
@@ -183,9 +175,23 @@ a,
     justify-content: center;
 }
 
-.btn {
+.btn1 {
+    background-color: #3882f6;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    width: 100px;
+    height: 30px;
+    margin-top: 0;
+}
+
+.btn2 {
+    background-color: #3882f6;
+    color: white;
+    border-radius: 5px;
     border: 1px solid white;
-    border-radius: 10px;
+    width: 100px;
+    height: 30px;
 }
 
 .footer {
